--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0030.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0030.html
@@ -141,8 +141,7 @@
         </span>
         <span id="w_24" class="ocr_word" title="bbox 906 275 922 320">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">jj</ins>
-            <del title="nlp 0.90">jj</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 952 279 1062 310" lang="grc">
@@ -198,7 +197,7 @@
         </span>
         <span id="w_35" class="ocr_word" title="bbox 2114 268 2131 300">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">.1</ins>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
       </span>
@@ -221,8 +220,7 @@
         </span>
         <span id="w_39" class="ocr_word" title="bbox 603 337 680 370">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iidd.</ins>
-            <del title="nlp 0.90">iidd.</del>
+            <ins title="nlp 2.00">add.</ins>
           </span>
         </span>
         <span id="w_40" class="ocr_word" title="bbox 707 347 902 382" lang="grc">
@@ -330,8 +328,7 @@
         </span>
         <span id="w_60" class="ocr_word" title="bbox 2098 399 2134 419">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">to</ins>
-            <del title="nlp 0.90">to</del>
+            <ins title="nlp 2.00">τὸ</ins>
           </span>
         </span>
       </span>
@@ -343,8 +340,7 @@
         </span>
         <span id="w_62" class="ocr_word" title="bbox 426 455 440 499">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">il</ins>
-            <del title="nlp 0.90">il</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_63" class="ocr_word" title="bbox 471 455 526 489">
@@ -364,8 +360,7 @@
         </span>
         <span id="w_66" class="ocr_word" title="bbox 892 462 957 485">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ora.</ins>
-            <del title="nlp 0.90">ora.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 986 450 1001 496">
@@ -412,8 +407,7 @@
         </span>
         <span id="w_75" class="ocr_word" title="bbox 1686 443 1702 490">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">jj</ins>
-            <del title="nlp 0.90">jj</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_76" class="ocr_word" title="bbox 1730 454 1766 489">
@@ -457,7 +451,7 @@
         </span>
         <span id="w_83" class="ocr_word" title="bbox 531 516 643 554" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦτο</ins>
+            <ins title="nlp 2.00">(τοῦτο</ins>
           </span>
         </span>
         <span id="w_84" class="ocr_word" title="bbox 671 513 751 552">
@@ -875,16 +869,11 @@
         </span>
         <span id="w_166" class="ocr_word" title="bbox 2053 740 2138 773" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀντι-</ins>
+            <ins title="nlp 2.00">ἀντιθέσεις</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 312 797 2138 851">
-        <span id="w_167" class="ocr_word" title="bbox 312 807 418 844" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θέσεις</ins>
-          </span>
-        </span>
         <span id="w_168" class="ocr_word" title="bbox 443 806 615 851" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λαμβάνει,</ins>
@@ -1236,8 +1225,7 @@
         </span>
         <span id="w_234" class="ocr_word" title="bbox 790 981 829 1013">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">IG</ins>
-            <del title="nlp 0.90">IG</del>
+            <ins title="nlp 2.00">16</ins>
           </span>
         </span>
         <span id="w_235" class="ocr_word" title="bbox 858 992 916 1024" lang="grc">
@@ -1426,9 +1414,14 @@
             <ins class="alt" title="nlp 1.00">17</ins>
           </span>
         </span>
-        <span id="w_271" class="ocr_word" title="bbox 749 1096 935 1130" lang="grc">
+        <span id="w_271_0" class="ocr_word" title="bbox 749 1096 935 1130">
           <span class="alternatives">
-            <ins title="nlp 2.00">δικαιολ.-καθ.</ins>
+            <ins class="alt" title="nlp 2.00">δικαιολ.—καθ.</ins>
+          </span>
+        </span>
+        <span id="w_271_1" class="ocr_word" title="bbox 749 1096 935 1130">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_272" class="ocr_word" title="bbox 1057 1097 1152 1138" lang="grc">
@@ -1464,11 +1457,6 @@
         <span id="w_278" class="ocr_word" title="bbox 1910 1106 1970 1138" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
-          </span>
-        </span>
-        <span id="w_279" class="ocr_word" title="bbox 2003 1106 2141 1139" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μερικῆς</ins>
           </span>
         </span>
       </span>
@@ -1513,9 +1501,14 @@
             <ins class="alt" title="nlp 1.00">προτάττειν</ins>
           </span>
         </span>
-        <span id="w_288" class="ocr_word" title="bbox 1589 1150 1848 1196" lang="grc">
+        <span id="w_288_0" class="ocr_word" title="bbox 1589 1150 1848 1196">
           <span class="alternatives">
-            <ins title="nlp 2.00">(προτάττεσθαι</ins>
+            <ins class="alt" title="nlp 2.00">(προτάττεσθαι</ins>
+          </span>
+        </span>
+        <span id="w_288_1" class="ocr_word" title="bbox 1589 1150 1848 1196">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_289" class="ocr_word" title="bbox 1875 1152 1914 1194">
@@ -1529,16 +1522,11 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_291" class="ocr_word" title="bbox 2005 1165 2142 1198" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μερικόν</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 315 1210 2143 1262">
         <span id="w_292" class="ocr_word" title="bbox 315 1219 388 1259" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
+            <ins title="nlp 2.00">(τοῦ</ins>
           </span>
         </span>
         <span id="w_293" class="ocr_word" title="bbox 415 1219 552 1262" lang="grc">
@@ -1626,8 +1614,7 @@
         </span>
         <span id="w_309" class="ocr_word" title="bbox 559 1272 574 1319">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_310" class="ocr_word" title="bbox 615 1273 665 1307">
@@ -1711,8 +1698,7 @@
         </span>
         <span id="w_325" class="ocr_word" title="bbox 2053 1268 2069 1303">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_326" class="ocr_word" title="bbox 2099 1269 2144 1303">
@@ -1729,8 +1715,7 @@
         </span>
         <span id="w_328" class="ocr_word" title="bbox 394 1336 445 1366">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ToT</ins>
-            <del title="nlp 0.90">ToT</del>
+            <ins title="nlp 2.00">τῷ</ins>
           </span>
         </span>
         <span id="w_329" class="ocr_word" title="bbox 471 1331 621 1366" lang="grc">
@@ -2093,7 +2078,7 @@
         </span>
         <span id="w_399" class="ocr_word" title="bbox 1307 1566 1468 1608" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἀλείψεσι</ins>
+            <ins title="nlp 2.00">ἀλείψεσι</ins>
           </span>
         </span>
         <span id="w_400" class="ocr_word" title="bbox 1494 1565 1546 1607" lang="grc">
@@ -2111,9 +2096,14 @@
             <ins class="alt" title="nlp 1.00">δὴ</ins>
           </span>
         </span>
-        <span id="w_403" class="ocr_word" title="bbox 1767 1565 1810 1605" lang="grc">
+        <span id="w_403_0" class="ocr_word" title="bbox 1767 1565 1810 1605">
           <span class="alternatives">
-            <ins title="nlp 2.00">λ.</ins>
+            <ins class="alt" title="nlp 2.00">(λ.</ins>
+          </span>
+        </span>
+        <span id="w_403_1" class="ocr_word" title="bbox 1767 1565 1810 1605">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_404" class="ocr_word" title="bbox 1837 1565 1882 1610" lang="grc">
@@ -2129,11 +2119,6 @@
         <span id="w_406" class="ocr_word" title="bbox 1999 1566 2040 1605" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Β)</ins>
-          </span>
-        </span>
-        <span id="w_407" class="ocr_word" title="bbox 2079 1569 2147 1602" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῖς</ins>
           </span>
         </span>
       </span>
@@ -3007,9 +2992,14 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_579" class="ocr_word" title="bbox 615 2284 686 2324">
+        <span id="w_579_0" class="ocr_word" title="bbox 615 2284 686 2324">
           <span class="alternatives">
-            <ins title="nlp 2.00">90r—191v</ins>
+            <ins class="alt" title="nlp 2.00">90r—191v</ins>
+          </span>
+        </span>
+        <span id="w_579_1" class="ocr_word" title="bbox 615 2284 686 2324">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_582" class="ocr_word" title="bbox 897 2282 1019 2323">
@@ -3040,12 +3030,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">liuuc</ins>
             <del title="nlp 0.90">liuuc</del>
-          </span>
-        </span>
-        <span id="w_587" class="ocr_word" title="bbox 1996 2285 2150 2326">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">librum</ins>
-            <del title="nlp 0.90">librum</del>
           </span>
         </span>
       </span>
@@ -3112,17 +3096,11 @@
         </span>
         <span id="w_598" class="ocr_word" title="bbox 2061 2368 2152 2408">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pro-</ins>
+            <ins title="nlp 2.00">propinquum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 332 2419 1229 2474">
-        <span id="w_599" class="ocr_word" title="bbox 332 2419 535 2474">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pinquiim</ins>
-            <del title="nlp 0.90">propinquiim</del>
-          </span>
-        </span>
         <span id="w_600" class="ocr_word" title="bbox 570 2433 665 2462">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">esse</ins>
@@ -3166,8 +3144,7 @@
         </span>
         <span id="w_607" class="ocr_word" title="bbox 747 2487 759 2533">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ji</ins>
-            <del title="nlp 0.90">ji</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_608" class="ocr_word" title="bbox 791 2489 810 2522">
@@ -3182,8 +3159,7 @@
         </span>
         <span id="w_610" class="ocr_word" title="bbox 1111 2487 1126 2533">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">jj</ins>
-            <del title="nlp 0.90">jj</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_611" class="ocr_word" title="bbox 1149 2489 1168 2522">
@@ -3240,16 +3216,11 @@
         </span>
         <span id="w_621" class="ocr_word" title="bbox 2095 2492 2150 2526" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἁ</ins>
+            <ins title="nlp 2.00">ἀλλότριον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 335 2546 982 2592">
-        <span id="w_622" class="ocr_word" title="bbox 335 2547 469 2592" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λότριον</ins>
-          </span>
-        </span>
         <span id="w_623" class="ocr_word" title="bbox 495 2558 559 2580">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
@@ -3258,8 +3229,7 @@
         </span>
         <span id="w_624" class="ocr_word" title="bbox 592 2546 606 2591">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">J;</ins>
-            <del title="nlp 0.90">J;</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_625" class="ocr_word" title="bbox 635 2547 678 2581">
@@ -3331,17 +3301,11 @@
         </span>
         <span id="w_637" class="ocr_word" title="bbox 1988 2622 2154 2664">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cbarta-</ins>
+            <ins title="nlp 2.00">chartaceus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 332 2685 2150 2740">
-        <span id="w_638" class="ocr_word" title="bbox 332 2697 431 2726">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ceus</ins>
-            <del title="nlp 0.90">cbartaceus</del>
-          </span>
-        </span>
         <span id="w_639" class="ocr_word" title="bbox 477 2686 649 2727">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">saeculo</ins>
@@ -3366,9 +3330,14 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_643" class="ocr_word" title="bbox 1139 2687 1292 2728">
+        <span id="w_643_0" class="ocr_word" title="bbox 1139 2687 1292 2728">
           <span class="alternatives">
-            <ins title="nlp 2.00">119r—2a6v</ins>
+            <ins class="alt" title="nlp 2.00">119r—216v</ins>
+          </span>
+        </span>
+        <span id="w_643_1" class="ocr_word" title="bbox 1139 2687 1292 2728">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_645" class="ocr_word" title="bbox 1444 2689 1525 2731">
@@ -3381,12 +3350,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">commentarium</ins>
             <del title="nlp 0.90">commentarium</del>
-          </span>
-        </span>
-        <span id="w_647" class="ocr_word" title="bbox 1965 2692 2150 2734">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">exbibet.</ins>
-            <del title="nlp 0.90">exbibet.</del>
           </span>
         </span>
       </span>
@@ -3452,9 +3415,14 @@
             <del title="nlp 0.90">sequuntur</del>
           </span>
         </span>
-        <span id="w_658" class="ocr_word" title="bbox 607 2821 902 2876">
+        <span id="w_658_0" class="ocr_word" title="bbox 607 2821 902 2876">
           <span class="alternatives">
-            <ins title="nlp 2.00">(216v—221)</ins>
+            <ins class="alt" title="nlp 2.00">(216v—221)</ins>
+          </span>
+        </span>
+        <span id="w_658_1" class="ocr_word" title="bbox 607 2821 902 2876">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_659" class="ocr_word" title="bbox 942 2821 1099 2863">
@@ -3485,12 +3453,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">eodice</ins>
             <del title="nlp 0.90">eodice</del>
-          </span>
-        </span>
-        <span id="w_664" class="ocr_word" title="bbox 2028 2830 2155 2872">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tineis</ins>
-            <del title="nlp 0.90">tineis</del>
           </span>
         </span>
       </span>
