--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0100.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0100.html
@@ -1094,9 +1094,9 @@
             <ins class="alt" title="nlp 1.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_209" class="ocr_word" title="bbox 2085 1689 2146 1725">
+        <span id="w_209_0" class="ocr_word" title="bbox 2085 1689 2146 1725">
           <span class="alternatives">
-            <ins title="nlp 2.00">68ν</ins>
+            <ins class="alt" title="nlp 2.00">68v</ins>
           </span>
         </span>
       </span>
@@ -1133,9 +1133,14 @@
             <ins class="alt" title="nlp 1.00">20</ins>
           </span>
         </span>
-        <span id="w_217" class="ocr_word" title="bbox 1282 1949 1380 2005" lang="grc">
+        <span id="w_217_0" class="ocr_word" title="bbox 1282 1949 1380 2005">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;Πρᾶξις κα΄&amp;x003E;.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_217_1" class="ocr_word" title="bbox 1282 1949 1380 2005">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κα΄&amp;#x003Ε;</ins>
           </span>
         </span>
       </span>
