--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0124.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0124.html
@@ -166,7 +166,7 @@
         </span>
         <span id="w_29" class="ocr_word" title="bbox 1406 346 1541 398" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦτο</ins>
+            <ins title="nlp 2.00">(τοῦτο</ins>
           </span>
         </span>
         <span id="w_30" class="ocr_word" title="bbox 1572 359 1644 398" lang="grc">
@@ -1049,9 +1049,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1082 1503 1374 1560">
-        <span id="w_201" class="ocr_word" title="bbox 1082 1503 1244 1560" lang="grc">
+        <span id="w_201_0" class="ocr_word" title="bbox 1082 1503 1244 1560">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις λα΄&amp;#x003Ε;.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_201_1" class="ocr_word" title="bbox 1082 1503 1244 1560">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">λα'&amp;x003E;.</ins>
           </span>
         </span>
       </span>
@@ -1354,14 +1359,14 @@
             <ins class="alt" title="nlp 1.00">τινα</ins>
           </span>
         </span>
-        <span id="w_260" class="ocr_word" title="bbox 1910 1944 2043 1995" lang="grc">
+        <span id="w_260_0" class="ocr_word" title="bbox 1910 1944 2043 1995">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐγκλή-</ins>
+            <ins class="alt" title="nlp 2.00">ἐγκλήματα</ins>
           </span>
         </span>
-        <span id="w_261" class="ocr_word" title="bbox 2067 1942 2126 1977">
+        <span id="w_260_1" class="ocr_word" title="bbox 1910 1944 2043 1995">
           <span class="alternatives">
-            <ins title="nlp 2.00">87ν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
