--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0222.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0222.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 327 105 1827 160">
         <span id="w_0" class="ocr_word" title="bbox 327 117 408 160">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Ig2</ins>
+            <ins title="nlp 2.00">182</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 647 113 787 148">
@@ -754,16 +754,11 @@
         </span>
         <span id="w_146" class="ocr_word" title="bbox 1956 927 2083 966" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τετρά-</ins>
+            <ins title="nlp 2.00">τετράπηχυ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 402 981 2082 1044">
-        <span id="w_147" class="ocr_word" title="bbox 402 1007 508 1044" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πηχυ</ins>
-          </span>
-        </span>
         <span id="w_148" class="ocr_word" title="bbox 541 1006 610 1030" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">οὐκ ἐπιδέχεται</ins>
@@ -1089,7 +1084,7 @@
         </span>
         <span id="w_211" class="ocr_word" title="bbox 2056 1264 2142 1298">
           <span class="alternatives">
-            <ins title="nlp 2.00">255ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
