--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0125.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0125.html
@@ -519,16 +519,11 @@
         </span>
         <span id="w_97" class="ocr_word" title="bbox 1782 805 1885 841" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γένε-</ins>
+            <ins title="nlp 2.00">γένεσιν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 205 854 1882 909">
-        <span id="w_98" class="ocr_word" title="bbox 205 869 260 895" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σιν</ins>
-          </span>
-        </span>
         <span id="w_99" class="ocr_word" title="bbox 294 870 332 894" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐν</ins>
@@ -720,16 +715,11 @@
         </span>
         <span id="w_136" class="ocr_word" title="bbox 1778 1010 1877 1049" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐνερ-</ins>
+            <ins title="nlp 2.00">ἐνεργείᾳ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 201 1059 1882 1115">
-        <span id="w_137" class="ocr_word" title="bbox 201 1076 285 1113" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γείᾳ</ins>
-          </span>
-        </span>
         <span id="w_138" class="ocr_word" title="bbox 316 1063 436 1100" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰπεῖν</ins>
@@ -787,16 +777,11 @@
         </span>
         <span id="w_149" class="ocr_word" title="bbox 1798 1078 1882 1104" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συν-</ins>
+            <ins title="nlp 2.00">συνυπάρξῃ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 202 1129 1944 1186">
-        <span id="w_150" class="ocr_word" title="bbox 202 1145 350 1183" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">υπάρξῃ</ins>
-          </span>
-        </span>
         <span id="w_151" class="ocr_word" title="bbox 384 1132 536 1172" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἑαυτοῖς</ins>
@@ -2810,9 +2795,14 @@
             <ins title="nlp 2.00">ἐπιπεφυκότα</ins>
           </span>
         </span>
-        <span id="w_534" class="ocr_word" title="bbox 535 3197 694 3239">
+        <span id="w_534_0" class="ocr_word" title="bbox 535 3197 694 3239">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;χιτῶνα&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;χιτῶνα&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_534_1" class="ocr_word" title="bbox 535 3197 694 3239">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_535" class="ocr_word" title="bbox 884 3206 922 3227">
@@ -2862,11 +2852,6 @@
         <span id="w_543" class="ocr_word" title="bbox 1616 3202 1807 3235">
           <span class="alternatives">
             <ins title="nlp 2.00">κερατοειδῆ</ins>
-          </span>
-        </span>
-        <span id="w_544" class="ocr_word" title="bbox 1822 3190 1836 3222">
-          <span class="alternatives">
-            <ins title="nlp 2.00">?</ins>
           </span>
         </span>
       </span>
