--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0031.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0031.html
@@ -36,21 +36,24 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_4" class="ocr_word" title="bbox 218 292 309 332">
+        <span id="w_4_0" class="ocr_word" title="bbox 218 292 309 332">
           <span class="alternatives">
-            <ins title="nlp 2.00">221r—291v</ins>
+            <ins class="alt" title="nlp 2.00">221r—291v</ins>
+          </span>
+        </span>
+        <span id="w_4_1" class="ocr_word" title="bbox 218 292 309 332">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 515 288 627 329">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">himc</ins>
-            <del title="nlp 0.90">himc</del>
+            <ins title="nlp 2.00">hunc</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 674 288 824 329">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">libruni</ins>
-            <del title="nlp 0.90">libruni</del>
+            <ins title="nlp 2.00">librum</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 869 288 1054 330">
@@ -75,12 +78,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">litteias</ins>
             <del title="nlp 0.90">litteias</del>
-          </span>
-        </span>
-        <span id="w_13" class="ocr_word" title="bbox 1783 288 1969 331">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iuitiales</ins>
-            <del title="nlp 0.90">iuitiales</del>
           </span>
         </span>
       </span>
@@ -202,17 +199,11 @@
         </span>
         <span id="w_33" class="ocr_word" title="bbox 1898 439 1969 479">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ap-</ins>
+            <ins title="nlp 2.00">appictae</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 155 493 1970 552">
-        <span id="w_34" class="ocr_word" title="bbox 155 498 291 552">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pictae</ins>
-            <del title="nlp 0.90">appictae</del>
-          </span>
-        </span>
         <span id="w_35" class="ocr_word" title="bbox 323 500 432 548">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">sunt,</ins>
@@ -331,17 +322,11 @@
         </span>
         <span id="w_56" class="ocr_word" title="bbox 1883 577 1970 603">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cor-</ins>
+            <ins title="nlp 2.00">correctiones</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 156 630 1970 686">
-        <span id="w_57" class="ocr_word" title="bbox 156 633 363 676">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rectiones</ins>
-            <del title="nlp 0.90">correctiones</del>
-          </span>
-        </span>
         <span id="w_58" class="ocr_word" title="bbox 394 645 556 686">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">paucas</ins>
@@ -509,8 +494,7 @@
         </span>
         <span id="w_85" class="ocr_word" title="bbox 1257 767 1534 810">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Kalbfieisch.</ins>
-            <del title="nlp 0.90">Kalbfieisch.</del>
+            <ins title="nlp 2.00">Kalbfleisch.</ins>
           </span>
         </span>
       </span>
@@ -984,16 +968,11 @@
         </span>
         <span id="w_164" class="ocr_word" title="bbox 1891 1352 1970 1385" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συμ-</ins>
+            <ins title="nlp 2.00">συμβεβηκός]</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 157 1402 431 1448">
-        <span id="w_165" class="ocr_word" title="bbox 157 1402 312 1448" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βεβηκός]</ins>
-          </span>
-        </span>
         <span id="w_166" class="ocr_word" title="bbox 340 1403 431 1446">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">exiil.</ins>
@@ -1092,14 +1071,8 @@
         </span>
         <span id="w_184" class="ocr_word" title="bbox 1879 1471 1918 1493">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ex</ins>
+            <ins class="alt" title="nlp 2.00">expi.</ins>
             <del title="nlp 0.90">ex</del>
-          </span>
-        </span>
-        <span id="w_185" class="ocr_word" title="bbox 1926 1460 1970 1503">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pi.</ins>
-            <del title="nlp 0.90">pi.</del>
           </span>
         </span>
       </span>
@@ -1265,8 +1238,7 @@
         </span>
         <span id="w_216" class="ocr_word" title="bbox 250 1636 263 1681">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_217" class="ocr_word" title="bbox 293 1647 330 1680">
@@ -1409,8 +1381,7 @@
         </span>
         <span id="w_242" class="ocr_word" title="bbox 290 1754 351 1788">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Sir</ins>
-            <del title="nlp 0.90">Sir</del>
+            <ins title="nlp 2.00">24r</ins>
           </span>
         </span>
         <span id="w_243" class="ocr_word" title="bbox 379 1756 428 1788">
@@ -1829,7 +1800,7 @@
         </span>
         <span id="w_321" class="ocr_word" title="bbox 1649 1988 1716 2030">
           <span class="alternatives">
-            <ins title="nlp 2.00">(διὰ</ins>
+            <ins title="nlp 2.00">διὰ</ins>
           </span>
         </span>
         <span id="w_322" class="ocr_word" title="bbox 1733 2000 1832 2021">
@@ -2062,8 +2033,7 @@
         </span>
         <span id="w_365" class="ocr_word" title="bbox 250 2164 265 2210">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_366" class="ocr_word" title="bbox 295 2165 407 2199">
@@ -2364,8 +2334,7 @@
         </span>
         <span id="w_422" class="ocr_word" title="bbox 335 2351 350 2398">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_423" class="ocr_word" title="bbox 380 2353 418 2386">
@@ -2496,8 +2465,7 @@
         </span>
         <span id="w_447" class="ocr_word" title="bbox 1474 2422 1538 2466">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xuj]</ins>
-            <del title="nlp 0.90">xuj</del>
+            <ins title="nlp 2.00">τῶ]</ins>
           </span>
         </span>
         <span id="w_448" class="ocr_word" title="bbox 1567 2422 1604 2455" lang="grc">
@@ -2513,8 +2481,7 @@
         </span>
         <span id="w_450" class="ocr_word" title="bbox 1737 2420 1751 2467">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">jj</ins>
-            <del title="nlp 0.90">jj</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_451" class="ocr_word" title="bbox 1773 2422 1816 2455">
@@ -2661,8 +2628,7 @@
         </span>
         <span id="w_479" class="ocr_word" title="bbox 506 2539 520 2586">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_480" class="ocr_word" title="bbox 552 2541 667 2575">
@@ -2776,8 +2742,7 @@
         </span>
         <span id="w_501" class="ocr_word" title="bbox 445 2598 458 2645">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_502" class="ocr_word" title="bbox 496 2600 610 2633">
@@ -3406,8 +3371,7 @@
         </span>
         <span id="w_621" class="ocr_word" title="bbox 253 3076 269 3122">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_622" class="ocr_word" title="bbox 297 3087 334 3121">
@@ -3535,8 +3499,7 @@
         </span>
         <span id="w_645" class="ocr_word" title="bbox 371 3136 385 3182">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_646" class="ocr_word" title="bbox 413 3138 512 3175" lang="grc">
@@ -3546,8 +3509,7 @@
         </span>
         <span id="w_647" class="ocr_word" title="bbox 540 3138 557 3183">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_648" class="ocr_word" title="bbox 586 3138 627 3183" lang="grc">
@@ -3562,8 +3524,7 @@
         </span>
         <span id="w_650" class="ocr_word" title="bbox 704 3137 721 3185">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_651" class="ocr_word" title="bbox 753 3140 795 3173">
@@ -3643,7 +3604,7 @@
       <span class="ocr_line" title="bbox 166 3192 1970 3243">
         <span id="w_665" class="ocr_word" title="bbox 166 3192 204 3224" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">13 ἢ </ins>
+            <ins title="nlp 2.00">ἢ </ins>
           </span>
         </span>
         <span id="w_666" class="ocr_word" title="bbox 545 3209 595 3230" lang="grc">
@@ -3733,8 +3694,7 @@
         </span>
         <span id="w_682" class="ocr_word" title="bbox 445 3253 459 3301">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_683" class="ocr_word" title="bbox 489 3255 528 3288">
