--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0172.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0172.html
@@ -1395,9 +1395,14 @@
             <ins title="nlp 2.00">Περὶ</ins>
           </span>
         </span>
-        <span id="w_272" class="ocr_word" title="bbox 935 1919 1048 1976">
+        <span id="w_272_0" class="ocr_word" title="bbox 935 1919 1048 1976">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;τῶν&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;τῶν&gt;</ins>
+          </span>
+        </span>
+        <span id="w_272_1" class="ocr_word" title="bbox 935 1919 1048 1976">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_273" class="ocr_word" title="bbox 1070 1936 1163 1961" lang="grc">
@@ -1438,11 +1443,6 @@
         <span id="w_280" class="ocr_word" title="bbox 1746 1918 1945 1960" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Πλωτῖνος</ins>
-          </span>
-        </span>
-        <span id="w_281" class="ocr_word" title="bbox 1968 1919 2065 1958" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀντιλέγων</ins>
           </span>
         </span>
       </span>
@@ -1943,7 +1943,7 @@
         </span>
         <span id="w_381" class="ocr_word" title="bbox 753 2637 773 2671" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">5 οὖν]</ins>
+            <ins title="nlp 2.00">οὖν]</ins>
           </span>
         </span>
         <span id="w_382" class="ocr_word" title="bbox 1143 2637 1197 2678" lang="grc">
