--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0126.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0126.html
@@ -129,7 +129,7 @@
         </span>
         <span id="w_22" class="ocr_word" title="bbox 2071 301 2138 335">
           <span class="alternatives">
-            <ins title="nlp 2.00">88ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -1299,9 +1299,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1076 1933 1391 1990">
-        <span id="w_252" class="ocr_word" title="bbox 1076 1933 1269 1988">
+        <span id="w_252_0" class="ocr_word" title="bbox 1076 1933 1269 1988">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις λβ΄&amp;#x003Ε;.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_252_1" class="ocr_word" title="bbox 1076 1933 1269 1988">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">λβ'&amp;003E;.</ins>
           </span>
         </span>
       </span>
@@ -1975,7 +1980,7 @@
         </span>
         <span id="w_384" class="ocr_word" title="bbox 712 2886 751 2917" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">13 τῶ]</ins>
+            <ins title="nlp 2.00">τῶ]</ins>
           </span>
         </span>
         <span id="w_385_0" class="ocr_word" title="bbox 937 2887 961 2916">
