--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0173.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0173.html
@@ -2303,7 +2303,7 @@
         </span>
         <span id="w_434" class="ocr_word" title="bbox 797 2866 834 2899">
           <span class="alternatives">
-            <ins title="nlp 2.00">oὐ</ins>
+            <ins title="nlp 2.00">ὐ</ins>
           </span>
         </span>
         <span id="w_435" class="ocr_word" title="bbox 860 2866 985 2911">
