--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0223.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0223.html
@@ -575,7 +575,7 @@
         </span>
         <span id="w_110" class="ocr_word" title="bbox 1375 783 1518 828" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πάντα</ins>
+            <ins title="nlp 2.00">(πάντα</ins>
           </span>
         </span>
         <span id="w_111" class="ocr_word" title="bbox 1540 799 1609 836" lang="grc">
@@ -662,9 +662,14 @@
             <ins class="alt" title="nlp 1.00">ἄρα</ins>
           </span>
         </span>
-        <span id="w_128" class="ocr_word" title="bbox 1221 919 1306 973">
+        <span id="w_128_0" class="ocr_word" title="bbox 1221 919 1306 973">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τῇ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τῇ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_128_1" class="ocr_word" title="bbox 1221 919 1306 973">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_129" class="ocr_word" title="bbox 1345 921 1457 961" lang="grc">
@@ -675,11 +680,6 @@
         <span id="w_130" class="ocr_word" title="bbox 1495 922 1660 975" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὑπάρχει</ins>
-          </span>
-        </span>
-        <span id="w_131" class="ocr_word" title="bbox 1691 936 1815 961" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦτο.</ins>
           </span>
         </span>
       </span>
@@ -1128,19 +1128,19 @@
             <ins class="alt" title="nlp 1.00">μόνῃ</ins>
           </span>
         </span>
-        <span id="w_218" class="ocr_word" title="bbox 1409 1471 1493 1526">
+        <span id="w_218_0" class="ocr_word" title="bbox 1409 1471 1493 1526">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τῇ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τῇ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_218_1" class="ocr_word" title="bbox 1409 1471 1493 1526">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_219" class="ocr_word" title="bbox 1515 1487 1627 1513" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐσίᾳ</ins>
-          </span>
-        </span>
-        <span id="w_220" class="ocr_word" title="bbox 1649 1475 1817 1527" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑπάρχει</ins>
           </span>
         </span>
       </span>
@@ -1666,16 +1666,11 @@
         </span>
         <span id="w_322" class="ocr_word" title="bbox 1711 2039 1817 2075" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μετα-</ins>
+            <ins title="nlp 2.00">μεταβολὴν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 147 2093 1818 2151">
-        <span id="w_323" class="ocr_word" title="bbox 147 2097 263 2151" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βολὴν</ins>
-          </span>
-        </span>
         <span id="w_324" class="ocr_word" title="bbox 296 2110 451 2151" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δέχεται</ins>
