--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0175.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0175.html
@@ -24,7 +24,7 @@
         </span>
         <span id="w_2" class="ocr_word" title="bbox 228 1101 297 1134">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;Ὁμώνυμα λέγεται ὧν ὄνομα μόνον κοινόν&amp;x003E;.</ins>
+            <ins title="nlp 2.00">&lt;᾿Ομώνυμα λέγεται ὧν ὄνομα μόνον κοινόν&gt;.</ins>
           </span>
         </span>
       </span>
@@ -1169,9 +1169,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 174 2567 1848 2631">
-        <span id="w_232" class="ocr_word" title="bbox 174 2576 246 2631">
+        <span id="w_232_0" class="ocr_word" title="bbox 174 2576 246 2631">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;ἐν&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;ἐν&gt;</ins>
+          </span>
+        </span>
+        <span id="w_232_1" class="ocr_word" title="bbox 174 2576 246 2631">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_233" class="ocr_word" title="bbox 261 2592 338 2621">
@@ -1222,11 +1227,6 @@
         <span id="w_242" class="ocr_word" title="bbox 1558 2567 1706 2607" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀνελεῖν</ins>
-          </span>
-        </span>
-        <span id="w_243" class="ocr_word" title="bbox 1728 2581 1848 2606" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῦτα</ins>
           </span>
         </span>
       </span>
